edit dockerfile and configfile; must set nfdc container to container

--- a/node02.conf
+++ b/node02.conf
@@ -16,7 +16,7 @@ repo
   storage
   {
     method "fs"              ; Currently, only sqlite storage engine is supported
-    path "/var/lib/ndn/repo/2"  ; Path to repo-ng storage folder
+    path "/var/lib/ndn/repo/"  ; Path to repo-ng storage folder
     max-packets 100000
   }
 
