Let DIFS use MongoDB when reading and writing

--- a/node.conf
+++ b/node.conf
@@ -3,20 +3,30 @@ repo
   data
   {
     registration-subset 1
-    prefix "ndn:/chipmunk/data"
+    prefix "ndn:/data"
   }
 
   cluster
   {
-    size 3
+    size 1
     id 0
-    prefix "ndn:/chipmunk"
+    prefix "ndn:/difs"
   }
 
   storage
   {
-    method "fs"              ; Currently, only sqlite storage engine is supported
-    path "/var/lib/ndn/repo/0"  ; Path to repo-ng storage folder
+    method "mongodb"              ; Currently, only sqlite("fs") and MongoDB("mongodb") storage engine is supported
+
+    fs
+    {
+      path "/tmp/repo/"  ; Path to repo-ng storage folder
+    }
+    mongodb
+    {
+      db "yuldb"
+      collection "colTest"
+    }
+
     max-packets 100000
   }
 
