--- a/manager.conf
+++ b/manager.conf
@@ -9,12 +9,9 @@ repo
   cluster
   {
     size 1
-    id 1
+    id 0
     prefix "ndn:/difs"
-    type "node"
-    name "/difs/0"
-    from "/difs/0"
-    to "/difs/1"
+    type "manager"
   }
 
   storage
@@ -48,3 +45,4 @@ repo
     }
   }
 }
+
