Add node delete & update test conf

--- a/node01.conf
+++ b/node01.conf
@@ -3,20 +3,33 @@ repo
   data
   {
     registration-subset 1
-    prefix "ndn:/chipmunk/data"
+    prefix "ndn:/data"
   }
 
   cluster
   {
-    size 3
-    id 0
-    prefix "ndn:/chipmunk"
+    size 1
+    id 2
+    prefix "ndn:/difs"
+    type "node"
+    name "/difs/0"
+    from "/difs/1"
+    to "/difs/2"
   }
 
   storage
   {
-    method "fs"              ; Currently, only sqlite storage engine is supported
-    path "/var/lib/ndn/repo/0"  ; Path to repo-ng storage folder
+    method "fs"              ; Currently, only sqlite("fs") and MongoDB("mongodb") storage engine is supported
+
+    fs
+    {
+      path "/tmp/repo/"  ; Path to repo-ng storage folder
+    }
+    mongodb
+    {
+      db "difs"
+    }
+
     max-packets 100000
   }
 
@@ -35,3 +48,4 @@ repo
     }
   }
 }
+
