Dockerfile edit: install systemctl, apt install clean and Dockerfile.dev

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -14,7 +14,7 @@ ARG VERSION_NFD=NFD-0.7.1
 # NFD 0.7.1 required sudo apt install libpcap-dev libsystemd-dev
 # NFD 0.7.0 required sudo apt-get install build-essential pkg-config libboost-all-dev libsqlite3-dev libssl-dev libpcap-dev
 RUN apt update \
-    && apt install -y git wget gnupg cmake vim \
+    && apt install -y git net-tools curl iputils-ping wget gnupg cmake vim \
     build-essential libboost-all-dev libssl-dev libsqlite3-dev pkg-config python3-minimal \
     libpcap-dev libsystemd-dev
 ##    g++ pkg-config python3-minimal libboost-all-dev libssl-dev libsqlite3-dev \
@@ -78,13 +78,11 @@ RUN ./waf configure \
 RUN wget -qO - https://www.mongodb.org/static/pgp/server-4.4.asc | apt-key add - \
     && echo "deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu focal/mongodb-org/4.4 multiverse" | tee /etc/apt/sources.list.d/mongodb-org-4.4.list \
     && apt-get update \
-    && apt-get install -y mongodb-org
+    && apt-get install -y mongodb-org 
 
 # cleanup
 RUN apt autoremove \
-    && apt remove -y git wget gnupg cmake \
-    build-essential libboost-all-dev libssl-dev libsqlite3-dev pkg-config python3-minimal \
-    libpcap-dev libsystemd-dev \
+    && apt remove -y git build-essential python3-minimal pkg-config \
     && apt install -y systemctl
 
 EXPOSE 6363/tcp
