--- a/manager.conf
+++ b/manager.conf
@@ -8,9 +8,8 @@ repo
 
   cluster
   {
-    size 1
-    id 0
-    prefix "ndn:/difs"
+    nodePrefix "/seoul"
+    prefix "/difs"
     type "manager"
   }
 
