--- a/node.conf
+++ b/node.conf
@@ -8,13 +8,12 @@ repo
 
   cluster
   {
-    size 1
-    id 1
-    prefix "ndn:/difs"
+    nodePrefix "/busan"
+    prefix "/difs"
     type "node"
-    name "/difs/0"
-    from "/difs/0"
-    to "/difs/1"
+    managerPrefix "/seoul/difs"
+    from "/seoul/difs"
+    to "/busan/difs"
   }
 
   storage
@@ -48,3 +47,4 @@ repo
     }
   }
 }
+
