--- a/manager.conf
+++ b/manager.conf
@@ -8,18 +8,18 @@ repo
 
   cluster
   {
-    nodePrefix "/seoul"
-    prefix "/difs"
-    type "manager"
+    nodePrefix "/seoul" ; node-name is nodePrefix/prefix
+    prefix "/difs"      ; common-name
+    type "manager"      ; if single node, you must set manager
   }
 
   storage
   {
-    method "fs"              ; Currently, only sqlite("fs") and MongoDB("mongodb") storage engine is supported
+    method "fs"         ; Currently, only sqlite("fs") and MongoDB("mongodb") storage engine is supported
 
     fs
     {
-      path "/tmp/repo/"  ; Path to repo-ng storage folder
+      path "/tmp/repo/" ; Path to repo-ng storage folder
     }
     mongodb
     {
