--- a/node.conf
+++ b/node.conf
@@ -8,17 +8,17 @@ repo
 
   cluster
   {
-    nodePrefix "/busan"
-    prefix "/difs"
-    type "node"
-    managerPrefix "/seoul/difs"
-    from "/seoul/difs"
-    to "/busan/difs"
+    nodePrefix "/busan" ; node-name is nodePrefix/prefix
+    prefix "/difs"      ; common-name
+    type "node"         ; if multi node
+    managerPrefix "/seoul/difs" ; manager type node-name
+    from "/seoul/difs"  ; from node-name
+    to "/busan/difs"    ; this node-name
   }
 
   storage
   {
-    method "fs"              ; Currently, only sqlite("fs") and MongoDB("mongodb") storage engine is supported
+    method "mongodb"              ; Currently, only sqlite("fs") and MongoDB("mongodb") storage engine is supported
 
     fs
     {
