node3 test case config

--- a/node02.conf
+++ b/node02.conf
@@ -3,20 +3,32 @@ repo
   data
   {
     registration-subset 1
-    prefix "ndn:/chipmunk/data"
+    prefix "ndn:/data"
   }
 
   cluster
   {
-    size 3
-    id 1
-    prefix "ndn:/chipmunk"
+    nodePrefix "/busan"
+    prefix "/difs"
+    type "node"
+    managerPrefix "/seoul/difs"
+    from "/seoul/difs"
+    to "/busan/difs"
   }
 
   storage
   {
-    method "fs"              ; Currently, only sqlite storage engine is supported
-    path "/var/lib/ndn/repo/1"  ; Path to repo-ng storage folder
+    method "mongodb"              ; Currently, only sqlite storage engine is supported
+    
+    fs
+    {
+      path "/tmp/repo/"
+    }
+    mongodb
+    {
+      db "difs"
+    }
+
     max-packets 100000
   }
 
