--- a/node03.conf
+++ b/node03.conf
@@ -3,20 +3,32 @@ repo
   data
   {
     registration-subset 1
-    prefix "ndn:/chipmunk/data"
+    prefix "ndn:/data"
   }
 
   cluster
   {
-    size 3
-    id 2
-    prefix "ndn:/chipmunk"
+    nodePrefix "/daejeon"
+    prefix "/difs"
+    type "node"
+    managerPrefix "/seoul/difs"
+    from "/busan/difs"
+    to "/daejeon/difs"
   }
 
   storage
   {
-    method "fs"              ; Currently, only sqlite storage engine is supported
-    path "/var/lib/ndn/repo/2"  ; Path to repo-ng storage folder
+    method "mongodb"              ; Currently, only sqlite storage engine is supported
+    
+    fs
+    {
+      path "/tmp/repo/"
+    }
+    mongodb
+    {
+      db "difs"
+    }
+
     max-packets 100000
   }
 
