--- a/node01.conf
+++ b/node01.conf
@@ -8,22 +8,18 @@ repo
 
   cluster
   {
-    size 1
-    id 2
-    prefix "ndn:/difs"
-    type "node"
-    name "/difs/0"
-    from "/difs/1"
-    to "/difs/2"
+    nodePrefix "/seoul" ; node-name is nodePrefix/prefix
+    prefix "/difs"      ; common-name
+    type "manager"      ; if single node, you must set manager
   }
 
   storage
   {
-    method "fs"              ; Currently, only sqlite("fs") and MongoDB("mongodb") storage engine is supported
+    method "fs"         ; Currently, only sqlite("fs") and MongoDB("mongodb") storage engine is supported
 
     fs
     {
-      path "/tmp/repo/"  ; Path to repo-ng storage folder
+      path "/tmp/repo/" ; Path to repo-ng storage folder
     }
     mongodb
     {
