KOREN node name change

--- a/conf/m-daejeon.conf
+++ b/conf/m-daejeon.conf
@@ -8,7 +8,7 @@ repo
 
   cluster
   {
-    nodePrefix "/daejeon" ; node-name is nodePrefix/prefix
+    nodePrefix "/dcn/daejeon" ; node-name is nodePrefix/prefix
     prefix "/difs"      ; common-name
     type "manager"      ; if single node, you must set manager
   }
