--- a/conf/n2-seoul.conf
+++ b/conf/n2-seoul.conf
@@ -8,12 +8,12 @@ repo
 
   cluster
   {
-    nodePrefix "/seoul"
+    nodePrefix "/dcn/seoul"
     prefix "/difs"
     type "node"
-    managerPrefix "/daejeon/difs"
-    from "/daejeon/difs"
-    to "/seoul/difs"
+    managerPrefix "/dcn/daejeon/difs"
+    from "/dcn/pangyo/difs"
+    to "/dcn/seoul/difs"
   }
 
   storage
