--- a/conf/n3-pangyo.conf
+++ b/conf/n3-pangyo.conf
@@ -8,12 +8,12 @@ repo
 
   cluster
   {
-    nodePrefix "/pangyo"
+    nodePrefix "/dcn/pangyo"
     prefix "/difs"
     type "node"
-    managerPrefix "/daejeon/difs"
-    from "/seoul/difs"
-    to "/pangyo/difs"
+    managerPrefix "/dcn/daejeon/difs"
+    from "/dcn/busan/difs"
+    to "/dcn/pangyo/difs"
   }
 
   storage
