--- a/conf/n4-gwangju.conf
+++ b/conf/n4-gwangju.conf
@@ -8,12 +8,12 @@ repo
 
   cluster
   {
-    nodePrefix "/gwangju"
+    nodePrefix "/dcn/gwangju"
     prefix "/difs"
     type "node"
-    managerPrefix "/daejeon/difs"
-    from "/pangyo/difs"
-    to "/gwangju/difs"
+    managerPrefix "/dcn/daejeon/difs"
+    from "/dcn/daejeon/difs"
+    to "/dcn/gwangju/difs"
   }
 
   storage
