--- a/conf/n5-busan.conf
+++ b/conf/n5-busan.conf
@@ -8,12 +8,12 @@ repo
 
   cluster
   {
-    nodePrefix "/busan"
+    nodePrefix "/dcn/busan"
     prefix "/difs"
     type "node"
-    managerPrefix "/daejeon/difs"
-    from "/gwangju/difs"
-    to "/busan/difs"
+    managerPrefix "/dcn/daejeon/difs"
+    from "/dcn/gwangju/difs"
+    to "/dcn/busan/difs"
   }
 
   storage
