DIFS config for KOREN

--- a/conf/n1-daejeon.conf
+++ b/conf/n1-daejeon.conf
@@ -8,12 +8,12 @@ repo
 
   cluster
   {
-    nodePrefix "/dcn/seoul"
+    nodePrefix "/dcn/daejeon"
     prefix "/difs"
     type "node"
     managerPrefix "/dcn/pangyo/difs"
-    from "/dcn/pangyo/difs"
-    to "/dcn/seoul/difs"
+    from "/dcn/seoul/difs"
+    to "/dcn/daejeon/difs"
   }
 
   storage
