--- a/conf/n5-busan.conf
+++ b/conf/n5-busan.conf
@@ -11,7 +11,7 @@ repo
     nodePrefix "/dcn/busan"
     prefix "/difs"
     type "node"
-    managerPrefix "/dcn/daejeon/difs"
+    managerPrefix "/dcn/pangyo/difs"
     from "/dcn/gwangju/difs"
     to "/dcn/busan/difs"
   }
