--- a/conf/m-pangyo.conf
+++ b/conf/m-pangyo.conf
@@ -8,21 +8,18 @@ repo
 
   cluster
   {
-    nodePrefix "/dcn/seoul"
-    prefix "/difs"
-    type "node"
-    managerPrefix "/dcn/pangyo/difs"
-    from "/dcn/pangyo/difs"
-    to "/dcn/seoul/difs"
+    nodePrefix "/dcn/pangyo" ; node-name is nodePrefix/prefix
+    prefix "/difs"      ; common-name
+    type "manager"      ; if single node, you must set manager
   }
 
   storage
   {
-    method "fs"              ; Currently, only sqlite storage engine is supported
-    
+    method "fs"         ; Currently, only sqlite("fs") and MongoDB("mongodb") storage engine is supported
+
     fs
     {
-      path "/tmp/repo/"
+      path "/tmp/repo/" ; Path to repo-ng storage folder
     }
     mongodb
     {
@@ -47,3 +44,4 @@ repo
     }
   }
 }
+
