--- a/conf/n4-gwangju.conf
+++ b/conf/n4-gwangju.conf
@@ -11,7 +11,7 @@ repo
     nodePrefix "/dcn/gwangju"
     prefix "/difs"
     type "node"
-    managerPrefix "/dcn/daejeon/difs"
+    managerPrefix "/dcn/pangyo/difs"
     from "/dcn/daejeon/difs"
     to "/dcn/gwangju/difs"
   }
