Fix last next_hash from 36 to 32

--- a/manager-veri.conf
+++ b/manager-veri.conf
@@ -80,32 +80,11 @@ repo
          key-locator
          {
            type name
-           name /example/repo ;/localhost/identity/digest-sha256
+           name /example/repo
            relation equal
         }
       }
-    } ; end of rule
-    ; rule {
-    ;   id "data"
-    ;   for data
-    ;   filter
-    ;   {
-    ;     type name
-    ;     name /
-    ;     relation is-prefix-of
-    ;   }    
-    ;   checker
-    ;   {
-    ;      type customized
-    ;      sig-type sha256
-    ;      key-locator
-    ;      {
-    ;        type name
-    ;        name /localhost/identity/digest-sha256
-    ;        relation is-prefix-of
-    ;     }
-    ;   }
-    ; } ; end of rule
+    }
     trust-anchor
     {
       type file
